Judges, as a class, display, in the matter of arranging alimony, that reckless generosity which is found only in men who are giving away someone else's cash. 		-- P.G. Wodehouse, "Louder and Funnier"

--- a/index.css
+++ b/index.css
@@ -18,7 +18,21 @@ body {
 	/* Allow canvas to hit the edges of the browser viewport. */
 	margin: 0;
 }
-
+#container {
+	width: 340px;
+	height: 100%;
+	margin: 0 auto;
+}
+#player-one, #player-two {
+	width: 12pt;
+	font-size: 12pt;
+	text-align: center;
+	float: left;
+}
+#reset {
+	float: right;
+	font-size: 12pt;
+}
 #screen {
 	margin: auto;
 
